clear code, remove excess button, fix toasts, hide keyboard

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Photo</string>
     <string name="favorite">Add to Favorite</string>
     <string name="favpic">FavPic</string>
+    <string name="add">Добавлено в избранное</string>
+    <string name="remove">Удалено из избранного</string>
+    <string name="favoritePic">Избранное</string>
 </resources>
